# rustmtg-webserver

./: .gitignore  Cargo.toml  cargo-timing-20220123T194932Z.html  cargo-timing-20220123T195143Z.html  cargo-timing.html
carddb/: Cargo.toml
carddb/src/: carddb.rs  lib.rs  parse_clause.rs  parse_clauseeffect.rs  parse_constraint.rs  parse_non_body.rs  token_builder.rs  tokenize.rs  util.rs
carddb/src/tests/: spawn_tests.rs
cardtypes/: Cargo.toml
cardtypes/src/: lib.rs
common/: Cargo.toml
common/src/: ability.rs  actions.rs  card_entities.rs  cardtypes.rs  cost.rs  counters.rs  ent_maps.rs  entities.rs  hashset_obj.rs  lib.rs  log.rs  mana.rs  spellabil.rs  token_attribute.rs  zones.rs
game/: Cargo.toml
game/src/: actions.rs  client_message.rs  ent_maps.rs  errors.rs  event.rs  game.rs  lib.rs  log.rs  player.rs
game/src/game/: build_game.rs  compute_actions.rs  event_generators.rs  handle_event.rs  layers_state_actions.rs  log.rs  resolve.rs  serialize_game.rs
game/src/game/handle_event/: combat.rs  phase_event.rs
game/src/tests/: aven_gagglemaster_tests.rs  baneslayer_angel_tests.rs  card_tests.rs  common_test.rs  counter_tests.rs  etb_tests.rs  lethal_damage.rs  mock_tests.rs  swift_response_test.rs
gameserver/: Cargo.toml
gameserver/src/: ability.rs  actions.rs  card_entities.rs  carddb.rs  client_message.rs  cost.rs  ent_maps.rs  event.rs  game.rs  hashset_obj.rs  main.rs  player.rs  spellabil.rs  token_builder.rs  write_schema.rs
gameserver/src/carddb/: spawn_error.rs  text_token.rs
gameserver/src/game/: build_game.rs  compute_actions.rs  handle_event.rs  layers_state_actions.rs  resolve.rs  serialize_game.rs
gameserver/src/game/handle_event/: combat.rs  phase_event.rs
mtg_log/: Cargo.toml
mtg_log/src/: lib.rs
mtg_log_macro/: Cargo.toml
mtg_log_macro/src/: lib.rs
proc_test/: Cargo.toml
proc_test/src/: lib.rs
src/: AppendableMap.rs  ability.rs  ability_db.rs  actions.rs  card_entities.rs  card_types.rs  carddb.rs  client_message.rs  components.rs  cost.rs  ent.rs  ent_maps.rs  entities.rs  errors.rs  event.rs  game.rs  hashset_obj.rs  main.rs  mana.rs  player.rs  spellabil.rs  subtypes.rs  token_builder.rs  types.rs  write_schema.rs
src/carddb/: parse_non_body.rs  spawn_error.rs  text_token.rs
src/game/: actions.rs  build_game.rs  compute_actions.rs  event_generators.rs  handle_event.rs  layers.rs  layers_state_actions.rs  resolve.rs  serialize_game.rs
src/game/handle_event/: combat.rs  phase_event.rs
static/: card.js  game.js  index.html  index.js  old-card.js  old-game.js  style.css
texttoken/: Cargo.toml
texttoken/src/: lib.rs
ui/: convert-rust-types.js  index.html  package-lock.json  package.json  rust_types.json
ui/public/: index.html
ui/src/: App.css  App.tsx  Card.tsx  Mana.tsx  Phases.tsx  PlayerBox.tsx  actions.ts  index.js  phases.js  rustTypes.ts  style.css
