[package]
name = "carddb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
texttoken = { path = "../texttoken"}
serde = "1.0.133"
serde_json = "1.0"
serde_derive= "1.0"
derivative = "2.2.0"
nom = "7.1.0"
schemars = "0.8.11"
log = "0.4.0"
serde_with = "2.2.0"
once_cell = "1.17.0"
test-log = "0.2.11"
env_logger = "0.10.0"