[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
texttoken = { path = "../texttoken"}
serde = "1.0.133"
serde_json = "1.0"
serde_derive= "1.0"
schemars = "0.8.11"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
enum-map = "2.4.0"
nom = "7.1.0"
derivative = "2.2.0"
test-log = "0.2.11"
