[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
carddb = { path = "../carddb" }
anyhow = "1.0.51"
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
futures-util = "0.3"
once_cell = "1.9.0"
serde = "1.0.133"
serde_json = "1.0"
serde_derive= "1.0"
derivative = "2.2.0"
futures = "0.3.19"
async-recursion = "1.0.0"
rand = "0.8.4"
nom = "7.1.0"
enum-map = "2.4.0"
schemars = "0.8.11"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
log = "0.4.0"
test-log = "0.2.11"
env_logger = "0.10.0"

[lib]
doctest = false